<resources>
    <string name="app_name">Ticket</string>
    <string name="new_ticket">Nouveau ticket</string>
    <string name="history">Historique</string>
    <string name="settings">Paramètres</string>
    <string name="takePicture">Prendre une photo</string>
    <string name="total" translatable="false">Total: %.2f €</string>
    <string name="carefour">Carefour</string>
    <string name="casino">Casino</string>
    <string name="leclerc">Leclerc</string>
    <string name="ticketAdded">Ticket ajouté !</string>
    <string name="commentaryHint">Commentaires</string>
    <string name="autre">Autre</string>
    <string name="credit">Crédits</string>
    <string name="credit_content">Fait par :</string>
    <string name="author1" translatable="false">Geraldes Jocelyn</string>
    <string name="author2" translatable="false" >Salvan Rom1n</string>
    <string name="avecAide">Avec l\'aide de :</string>
    <string name="assistAuthor" translatable="false" >Arnault Brice</string>
    <string name="iut_logo" translatable="false" >Iut logo</string>
    <string name="titleMainScreen">Nouveau ticket</string>
    <string name="magasinGroupTitle">Type de ticket</string>
    <string name="iut_link" translatable="false">https://iut.univ-tlse3.fr/</string>
    <string name="emptyHistory">Aucun ticket enregistré...</string>
    <string name="statsTitle">Statistiques</string>
    <string name="ticketSaved">Modifications enregistrées</string>
    <plurals name="tickets">
        <item quantity="one">%s ticket</item>
        <item quantity="other">%s tickets</item>
    </plurals>
    <plurals name="products">
        <item quantity="one">%s produit</item>
        <item quantity="other">%s produits</item>
    </plurals>
</resources>
